weblate/static/styles/main.css
/* ... */
.auth-info {
  display: inline-block;
}
.auth-list .auth-image {
  vertical-align: top;
  padding: 0 5px;
}
.recovery-codes {
  columns: 2;
}
.recovery-codes li {
  font-family: monospace;
}

.auth-name {
  margin: 8px 0;
  display: inline-block;
}

.totp-qr svg {
  margin: auto;
  background: #fff;
  display: block;
}
.totp-qr svg path {
  fill: black !important;
}

.dropdown-menu {
  border: none;
  border-radius: var(--border-radius);
}

.daterangepicker {
  border: var(--border) !important;
}

#appearance-settings input[type="color"] {
  width: 50%;
}

/* START: Shortcuts table styles */
#shortcuts-table-container {
  max-height: 60vh;
  overflow-y: auto;
}

#shortcuts-table-container #t-head {
  font-weight: bold;
}

#shortcuts-table-container kbd {
  color: unset;
}
/* END: Shortcuts table styles */

/** START: Search Previewe styles */
#search-preview {
  display: none;
  width: 100%;
  min-height: 40px;
  max-height: 200px;
  margin-top: -10px;
  background: white;
  padding: 5px;
  border-radius: 4px;
  border: 1px solid #ccc;
  border-top: none;
  overflow-y: auto;
  box-shadow: 1px 2px 4px #00000020;
}

#search-preview > #search-result {
  display: block;
  padding: 5px;
  margin-bottom: 5px;
  text-decoration: none;
  color: inherit;
  border-radius: 4px;
}

#search-preview > #search-result:hover {
  background-color: #cccccc50;
}

#search-preview > #search-result > div {
  margin-left: 10px;
}

#results-num {
  font-size: 16px;
  font-weight: bold;
  color: #1fa385;
  margin: 10px;
}
/** END: Search Previewe styles */

/** START: Zen Editor sticky bottom styles */
.sticky-bottom {
  position: sticky;
  bottom: 0;
  background-color: white;
  z-index: 1000;
}

.hide-sticky {
  display: none;
  position: absolute;
  top: -30%;
  right: 0;
}

.sticky-bottom .hide-sticky {
  display: block !important;
}
/** END: Zen Editor sticky bottom styles */

.panel {
  border-radius: var(--border-radius);
  border: var(--border);
  overflow-y: hidden;
}

.panel-default > .panel-heading {
  background-color: #e9eaec60;
  border: var(--border);
}
.panel-danger > .panel-heading {
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
}

.panel:last-child,
.panel-footer {
  border-bottom-right-radius: var(--border-radius);
  border-bottom-left-radius: var(--border-radius);
}

.panel-footer {
  border-top: var(--border);
}

/* Zammad form integration */
.zammad-form-modal-body {
  max-width: 40em !important;
}

.altcha {
  max-width: none !important;
}

